--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,41 +1,128 @@
 /* styles for the elements */
+* {
+    margin: 0;
+    padding: 0;
+}
 :root {
-    --text-color-1: #e85a4f;
-    --text-color-2: #4b4b4b;
-    --text-color-3: #e98074;
+    --text-color-1: #4b4b4b;
+    --text-color-2: #e98074;
+    --text-color-3: #e85a4f;
     --accent-color: #d8c3a5;
+    --background-color: #eae7dc;
 }
 body {
-    color: var(--text-color-2);
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: var(--text-color-1);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    width: 1000px;
+    margin: 1em auto;
+}
+h1, h2, h3 {
+    color: var(--text-color-3);
+    text-shadow: .05em .05em .15em var(--text-color-2);
+}
+footer {
+    width: 1000px;
 }
 
 /* styles for the header */
-header img {
-    float: left;
-    margin-right: 1em;
+.Title {
+    background-color: var(--background-color);
+    border: 3px solid var(--text-color-3);
+    padding: 1em;
+    background-image: linear-gradient(0deg, var(--text-color-2) 10%, var(--background-color) 25%, var(--background-color) 75%, var(--text-color-2) 100%);
 }
-header {
-    clear: left;
+.Title h1 {
+    margin: 7px 0;
+    width: 600px;
+    text-align: center;
+    float: left;
+}
+#imgleft {
+    width: 50px;
+    float: left;
+    margin-left: 131px;
+}
+#imgright {
+    width: 50px;
+    margin-right: 131px;
 }
 header p {
+    background-color: var(--background-color);
+    clear: both;
     text-indent: 1em;
-}
-h1, h2, h3 {
-    color: var(--text-color-1);
-    text-shadow: .05em .05em .15em var(--text-color-3);
+    border-left: 3px solid var(--text-color-3);
+    border-right: 3px solid var(--text-color-3);
+    padding: 1em;
 }
 
 /* styles for the main content */
 ul>li {
-    color: var(--text-color-1);
+    color: var(--text-color-3);
 }
 a:hover {
     font-style: italic;
     font-weight: bold;
 }
+.images-list {
+    background-color: var(--background-color);
+    border: 3px solid var(--text-color-3);
+    padding: 1em;
+    width: 462px;
+    float: left;
+}
+.images-list h2 {
+    padding: 5px 10px;
+}
+.images-list p {
+    padding: 5px 0;
+}
+.images-list ul {
+    padding: 0 0 5px 30px; 
+}
+.favorites-list {
+    background-color: var(--background-color);
+    border-top: 3px solid var(--text-color-3);
+    border-bottom: 3px solid var(--text-color-3);
+    border-right: 3px solid var(--text-color-3);
+    padding: 1em;
+    height: 874px;
+    width: 465px;
+    float: right;
+}
+.favorites-list h2 {
+    padding: 5px 10px;
+}
+.favorites-list p {
+    padding: 5px 0;
+}
+.favorites-list ol {
+    padding: 0 0 5px 30px; 
+}
+.favorites-list li {
+    padding: .25em;
+}
+
 
 /* styles for the footer */
-#copyright {
+footer {
+    clear: both;
+}
+.foot-notes {
+    background-color: var(--background-color);
+    border: 3px solid var(--text-color-3);
+    padding: 1em;
+}
+.foot-notes h3 {
+    padding: 5px 10px;
+}
+.foot-notes p {
+    padding: 5px 0;
+}
+.copyright {
+    border-left: 3px solid var(--text-color-3);
+    border-right: 3px solid var(--text-color-3);
+    border-bottom: 3px solid var(--text-color-3);
     text-align: center;
+    padding: 1em;
+    background-image: linear-gradient(0deg, var(--text-color-3) 0%, var(--text-color-2) 25%, var(--background-color) 50%, var(--text-color-2) 75%, var(--text-color-3) 100%);
 }
