--- a/styles/newstyles.css
+++ b/styles/newstyles.css
@@ -21,6 +21,10 @@ h1, h2, h3 {
 }
 
 /* styles for the header */
+header {
+    width: 100%;
+    max-width: 1200px;
+}
 header h1{
     width: 100vw;
     border-bottom: 3px solid var(--border-color);
@@ -28,10 +32,6 @@ header h1{
     padding: 1.5%;
     background-color: var(--background-color);
     background-image: linear-gradient(0deg, var(--text-color-2) 10%, var(--background-color) 25%, var(--background-color) 75%, var(--text-color-2) 90%);
-}
-header {
-    width: 80%;
-    max-width: 1200px;
 }
 
 /* styles for the navigation menu */
@@ -45,13 +45,13 @@ header {
 #nav_menu ul {
     list-style-type: none;
     position: relative;
+    display: flex;
 }
 ul#drop-down {
     padding: 0;
 }
 #nav_menu ul li {
-    float: left;
-    width: 33.33333%;
+    flex-basis: 33.33333%;
 }
 #nav_menu ul li a {
     text-align: center;
@@ -66,16 +66,25 @@ ul#drop-down {
 #nav_menu ul li a.lastitem { border-right: none;}
 #nav_menu ul li a.current { color: #000000;}
 #nav_menu ul li a#current { color: #000000;}
-#nav_menu ul li a:hover { background-color: #eb9e95;}
+#nav_menu ul li a:hover { 
+    background-color: #eb9e95;
+    flex-basis: 100%;
+}
 #nav_menu ul ul {
     display: none;
     position: absolute;
     top: 100%;
-    width: 100%;
+    width: 33.33333%;
 }
-#nav_menu ul ul li {float: none;}
+#nav_menu ul ul li {
+    float: none;
+}
 #nav_menu ul li:hover > ul {
-    display: block;
+    display: flex;
+    flex-direction: column;
+}
+#nav_menu ul li:hover > ul li {
+    flex-basis: 100%;
 }
 #nav_menu > ul::after {
     content: "";
@@ -104,11 +113,13 @@ span {
     text-indent: 1em;
     border-bottom: 3px dashed var(--border-color);
 }
+div#artsong {
+    display: flex;
+}
 
 /* styles for favorite artists section */
 .images-list {
-    width: 47.875%;
-    float: left;
+    flex-basis: 100%;
     padding: 1%;
     height: 100%;
     min-height: 892px;
@@ -150,11 +161,10 @@ img#michel {
 
 /* styles for favorite songs section */
 .favorites-list {
-    width: 47.775%;
-    float: right;
     padding: 1%;
     height: 100%;
     min-height: 892px;
+    flex-basis: 100%;
 }
 .favorites-list h2 {
     padding-left: 1%;
@@ -223,9 +233,15 @@ footer {
 }
 
 @media only screen and (max-width: 1060px) {
+    div#artsong {
+        display: flex;
+        flex-direction: column;
+    }
+    h2.bodyheader {
+        padding: 1%;
+    }
     .images-list {
-        width: 98.71698%;
-        float: left;
+        flex-basis: 100%;
         padding: 1%;
         height: 100%;
         min-height: 833px;
@@ -233,8 +249,7 @@ footer {
         border-bottom: 3px dashed var(--border-color);
     }
     .favorites-list {
-        width: 98.71698%;
-        float: left;
+        flex-basis: 100%;
         padding: 1%;
         height: 100%;
         min-height: 400px;
@@ -250,13 +265,15 @@ footer {
 }
 
 @media only screen and (max-width: 600px) {
+    #nav_menu ul {
+        display: flex;
+        flex-direction: column;
+    }
     #nav_menu ul li {
-        float: left;
-        width: 100%;
+        flex-basis: 100%;
     }
     #nav_menu ul li a {
         text-align: center;
-        display: block;
         padding: 4% 0;
         text-decoration: none;
         background-color: var(--text-color-2);
@@ -264,6 +281,9 @@ footer {
         font-weight: bold;
         border-right: 0 solid var(--border-color);
         border-bottom: 3px solid var(--border-color);
+    }
+    #nav_menu ul ul {
+        width: 100%;
     }
     #nav_menu ul li a.lastitem { border-bottom: none;}
     article {
