--- a/styles/slicknav.css
+++ b/styles/slicknav.css
@@ -20,7 +20,7 @@
 	margin: 0.188em 0 0 0.438em;
 }
 .slicknav_menu .slicknav_no-text {
-	margin: 0
+	margin: 0;
 }
 .slicknav_menu .slicknav_icon-bar {
 	display: block;
@@ -34,13 +34,13 @@
 	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
 }
 .slicknav_btn .slicknav_icon-bar + .slicknav_icon-bar {
-	margin-top: 0.188em
+	margin-top: 0.188em;
 }
 .slicknav_nav {
-	clear: both
+	clear: both;
 }
 .slicknav_nav ul, .slicknav_nav li {
-	display: block
+	display: block;
 }
 .slicknav_nav .slicknav_arrow {
 	font-size: 0.8em;
@@ -51,21 +51,21 @@
 	cursor: pointer;
 }
 .slicknav_nav a {
-	display: block
+	display: block;
 }
 .slicknav_nav .slicknav_item a {
-	display: inline
+	display: inline;
 }
 .slicknav_menu:before, .slicknav_menu:after {
 	content: " ";
 	display: table;
 }
 .slicknav_menu:after {
-	clear: both
+	clear: both;
 }
 /* IE6/7 support */
 .slicknav_menu {
-*zoom: 1;
+zoom: 1;
 border-bottom: 3px solid #e04f44;
 border-left: 3px solid #e04f44;
 border-right: 3px solid #e04f44;
